Git Tests/force-app/main/default/default/objects/Integracoes__c/Integracoes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuração  personalizada utilizada para gerir os dados de acessos das integrações</description>
    <label>Integrações</label>
</CustomObject>