Git Tests/force-app/main/default/default/objects/Integracoes__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <inlineHelpText>URL de acesso ao serviço</inlineHelpText>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>