Git Tests/force-app/main/default/default/objects/Integracoes__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Método</label>
    <length>255</length>
    <type>Text</type>
</CustomField>